[gd_scene load_steps=3 format=3 uid="uid://by8s8ji782hg1"]

[ext_resource type="Script" uid="uid://cpk6obmvrohwk" path="res://scripts/ai_scene.gd" id="1_jgt0p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_303ft"]
size = Vector3(18, 1.8, 18)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_jgt0p")

[node name="Truck1Spot" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 24, 0, 15)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Truck1Spot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
shape = SubResource("BoxShape3D_303ft")

[node name="Sedan1" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 16, 0, 7)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sedan1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
shape = SubResource("BoxShape3D_303ft")

[node name="policeAI" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="policeAI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
shape = SubResource("BoxShape3D_303ft")
